# Deep-Sudoku

./: .gitattributes  .gitignore  README.md  Solving sudokus.ipynb  Untitled.ipynb  data_preprocessing.py  eval.ipynb  main.ipynb  network_depth_choice.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  testing_training_procedure.ipynb  train.ipynb  train_new.ipynb
.github/workflows/: python-application.yml
.ipynb_checkpoints/: main-checkpoint.ipynb
data/: 5801_sudokus.pil  natural_distribution.np  test.pil  train.pil  val.pil
deep_sudoku/: config.py  data.py  main.py
deep_sudoku/utils/: data_utils.py  sudoku_utils.py
deepsudoku/: __init__.py  config.py  data.py  model.py  montecarlo.py  montecarlo_old.py  network.py  pseudocode.py  test.py  unet.py
deepsudoku/dsnn/: evaluation.py  loss.py  models.py  resnet.py  se_resnet.py  sudoker.py  training.py  transformer.py  unet.py
deepsudoku/models/: lucidrains_transformer.py  se_resnet.py  sudoker.py  transformer.py
deepsudoku/montecarlo/: SudokuState.py  simulation.py  sudoku_state.py
deepsudoku/nn/: evaluation.py  loss.py  models.py  resnet.py  se_resnet.py  sudoker.py  training.py  unet.py
deepsudoku/resources/: difficulty.pkl
documentation/: Loss.txt  Reference.txt  Reference.xlsx  models.xlsx
tests/: test_data_utils.py  test_network_utils.py  test_sudoku.py  test_sudoku_utils.py
training_notebooks/: 1. Difficulty determination.ipynb  2. Initial SeResNet training.ipynb  3. Training new networks.ipynb  4. Difficulty re-determination and evaluation.ipynb  5. Fine-tuning.ipynb
(+5 files in other folders)
